--- a/people.tex
+++ b/people.tex
@@ -9,9 +9,12 @@
 \end{itemize}
 \item  Moving
 \begin{itemize}
+\item Michael Wood-Vasey steps down as DM validation scientist
 \item Jeff Carlin - moved to the DM Science  from Project Office
 \item Hsin-fang Chang - moved from NCSA to AURA
 \end{itemize}
+
+and Xiuqin is moving on .
 \end{itemize}
 }
 
