travis to find lsst2019 ..

--- a/lsst.tex
+++ b/lsst.tex
@@ -1,7 +1,7 @@
 \section{LSST}
 \frame{\frametitle{ Site shaping up }
 \begin{center}
-\includegraphics[width=0.6\textwidth]{lsst2019}
+\includegraphics[width=0.6\textwidth]{figures/lsst2019}
 \end{center}
 }
 
