grpahics path not working ?

--- a/lsst.tex
+++ b/lsst.tex
@@ -9,6 +9,6 @@
 \frame{\frametitle{ Coating Chamber }
 \begin{center}
 
-\includegraphics[width=0.6\textwidth]{cc2019}
+\includegraphics[width=0.6\textwidth]{figures/cc2019}
 \end{center}
 }
