--- a/conc.tex
+++ b/conc.tex
@@ -7,6 +7,16 @@
 \item The project is moving ahead rapidly - expect more issues as we get closer to reality.
 \item Enjoy Hoodies - Photo at end of this session !
 \item DM Night out on Wednesday - partners welcome.
+\begin{itemize}
+	\item Looks like {\bf Brother Johns - 1801 N Stone Ave  -  18:30}
+        \item Informal drinks - food
+	\item Nothing very close by - so will need to Uber/drive - DM will cover that.
+\begin{itemize}
+	\item {\bf Group with those who have  LSST Uber accounts.  }
+	\item {We will catch the billing after and pay it from discretionary finds - it is not allowable.}
+\end{itemize}
+	\item Would like an indication of numbers -- show of hands  ?
+\end{itemize}
 
 \end{itemize}
 }
