--- a/hsc.tex
+++ b/hsc.tex
@@ -8,12 +8,12 @@
               \end{center}
                       \column{0.5\textwidth}
                        \\
-                       \vspace{1cm}
+                       \vspace{0.5cm}
                        HSC image (COSMOS) from g, r (1.5 hrs), and i (3 hrs) bands; PSF matched co-add ($\approx 27.5$).\\
                        \vspace{3mm}
                        Processed with the \textit{LSST Science Pipelines}\\\url{https://pipelines.lsst.io/}.\\
                        \vspace{3mm}
-                       We regularly reprocess data from HSC and other precursor facilities at the LSST Data Facility as part of our integration tests.\\
+                       Still there is a lot to do for LSST. \\
                        \vspace{10mm}
                {\tiny \bf{Image courtesy of the HSC collaboration \& Robert Lupton}}
                \end{columns}
