--- a/overview.tex
+++ b/overview.tex
@@ -45,15 +45,16 @@ See the DM management plan, \citeds{LDM-294}.
 \vspace{-0.3cm}
 \
 \begin{columns}
-\begin{column}{0.3\textwidth}
+\begin{column}{0.4\textwidth}
 DM has been busy!\\ \smallskip
 $\sim{}1$ million lines of code/comments (C++/Python/Java/JavaScript/Kotlin; see SPIE paper by \citealp{2018SPIE10707E..09J})\\
+\vspace{2cm}
+{\tiny \bf diagram by Tim Jenness; covers only the Science Pipelines codebase.}\\
 \end{column}
-\begin{column}{0.7\textwidth}
+\begin{column}{0.6\textwidth}
 
-\vspace{-1.3cm}
+\vspace{-0.5cm} \hspace{0.5cm}
       \includegraphics[width=1.0\textwidth]{images/linesOfCode}\\
-{\tiny \bf diagram by Tim Jenness; covers only the Science Pipelines codebase.}
 \end{column}
 \end{columns}
 }
@@ -86,7 +87,7 @@ Related to Passed Test Cases & 79 & 80 \\[0.1cm]
 \textbf{Total} & \textbf{693} & \textbf{1002} \\
 \end{longtable}
 \vspace{-5pt}
-There are 58 1a requirements which should be verifified for commissioning start.
+There are 58 1a requirements which should be verified for commissioning start.
 }
 
 \input{goals}
