--- a/people.tex
+++ b/people.tex
@@ -6,6 +6,7 @@
 \item Lee Kelvin - joins DRP from Liverpool John’s Moore’s University
 \item Arun Kannawadi - joins DRP from Leiden Observatory
 \item Clare Saunders ( who can’t make PCW) - joins DRP  from “Laboratoire de Physique Nucl\'eaire et de Hautes \'Energies, IN2P3, CNRS
+\item Dave Monet, Consultant/Volunteer, Commissioning/DM Science Validation, working with Chuck and Leanne on science validation
 \end{itemize}
 \item  Moving
 \begin{itemize}
