--- a/review.tex
+++ b/review.tex
@@ -3,8 +3,8 @@
 
 \item{Just finished Joint Directors Review - 2 recommendations
   \begin{itemize}
-    \item{ More cloud. }
-    \item{ tooling for workflows especially debugging .}
+    \item{ Be ready to use any available resources  e.g.  cloud, but also other compute. }
+    \item{ Tooling for workflow management  especially debugging .}
 	\item {General feed back was positive.}
   \end{itemize}
 }
