--- a/statsum.tex
+++ b/statsum.tex
@@ -1,6 +1,7 @@
 \frame{\frametitle{ DM indicators - Thank you all Again ! }
 You may not care  much about these numbers but our funding agencies do.
-
-\includegraphics[width=0.7\textwidth]{figures/vari}
+\begin{center}
+\includegraphics[width=0.8\textwidth]{figures/vari}
+\end{center}
 }
 
