--- a/status.tex
+++ b/status.tex
@@ -17,7 +17,7 @@
   \begin{itemize}
     \item LSST Data Management Acceptance Test Specification \citeds{LDM-639}.
     \item One new FTE working on DM verification since December 2018.
-    \item Science verification workshop --- a collaboration between Comissioning,  DM and Camera Subsystems --- took place in June 2019.
+    \item Science verification workshop --- a collaboration between Commissioning,  DM and Camera Subsystems --- took place in June 2019.
  \end{itemize}
 
 \end{itemize}
@@ -46,7 +46,7 @@
 
         \item{The DRP team undertook a very successful ``sprint'' to integrate the SCARLET deblender \citep{2018A&C....24..129M} into the LSST Science Pipelines; it can now be run as part of regular LSST processing.}
             \item{The DRP team have integrated a version of the Forward Global Calibration Model \citep[FGCM;][]{2018AJ....155...41B} with the LSST Pipelines, and have extended it to provide absolute photometric calibration with respect to a reference catalog.}
- \item{A first protytpe of the one-dimensional spectral extraction pipeline designed to reduce data produced by the Auxiliary Telescope Spectrograph has been produced.}
+ \item{A first prototype of the one-dimensional spectral extraction pipeline designed to reduce data produced by the Auxiliary Telescope Spectrograph has been produced.}
            \item{Delivered partial mitigation for the brighter-fatter effect \citep{2014JInst...9C3048A}.}
 
   \end{itemize}
@@ -133,6 +133,5 @@
 \end{center}
 }
 
-\input{miles}
 \input{hsc}
 \input{review}
