Complete list of arrivals and departures.
Bold means “at this meeting”.

--- a/people.tex
+++ b/people.tex
@@ -1,21 +1,41 @@
 
-\frame{\frametitle{New people - moving people}
+\frame[allowframebreaks]{\frametitle{Many new faces..."}
 \begin{itemize}
-\item  Joining DM
-\begin{itemize}
-\item Lee Kelvin - joins DRP from Liverpool John’s Moore’s University
-\item Arun Kannawadi - joins DRP from Leiden Observatory
-\item Clare Saunders ( who can’t make PCW) - joins DRP  from “Laboratoire de Physique Nucl\'eaire et de Hautes \'Energies, IN2P3, CNRS
-\item Dave Monet, Consultant/Volunteer, Commissioning/DM Science Validation, working with Chuck and Leanne on science validation
-\end{itemize}
-\item  Moving
-\begin{itemize}
-\item Michael Wood-Vasey steps down as DM validation scientist
-\item Jeff Carlin - moved to the DM Science  from Project Office
-\item Hsin-fang Chang - moved from NCSA to AURA
+\item \textbf{Josh Meyers} -- (re!) joined the DRP team from LLNL, November 2018
+\item \textbf{Andr\'es Plazas} -- joined the DRP team, November 2018
+\item \textbf{R\'emy Joseph} -- Joined DRP from EPFL (Switzerland), December 2018
+\item \textbf{Fred Mooelkamp} -- (re!) joined the DRP team, February 2019
+\item Peter Hartman -- joined LDF as storage/system administrator, May 2019
+\item \textbf{Scott Daniel} -- joined AP, July 2019; continues to work part-time for LSST Commissioning
+\item Brandon Carswell -- joined LDF as a system administrator, July 2019
+\item Carman Hendsicks -- joined LDF as a facility operator, July 2019
+\item Chad Kerner -- joined LDF as a storage/system administrator, July 2019
+\item Anthony Redding -- joined LDF as a facility operator, July 2019
+\item Yan Zhan -- joined LDF as a system administrator, July 2019
+\item \textbf{Lee Kelvin} -- joining DRP from Liverpool John Moores University, October 2019
+\item \textbf{Arun Kannawadi} -- joining DRP from Leiden Observatory, October 2019
+\item Clare Saunders -- joining DRP from Laboratoire de Physique Nucl\'eaire et de Hautes \'Energies, IN2P3, CNRS, October 2019
+\item Morgan Schmitz -- joining DRP from CEA Saclay, January 2020
+\item \textbf{Dave Monet} -- Consultant/Volunteer on Commissioning \& DM Science Validation
+\item \textbf{Jeff Carlin} -- Working with the DM Science team on verification planning
+
 \end{itemize}
 
-and Xiuqin is moving on .
+}
+
+\frame{\frametitle{...and some moving on}
+\begin{itemize}
+\item Vaikunth Thukral (DAX) left February 2019
+\item Steve Groom (SUIT) left May 2019
+\item Andres Villalobos (Base \& Net) left May 2019
+\item Shin-Ywan Cindy Yang (SUIT) left June 2019
+\item Harathi Korrapati (LDF) left July 2019
+\item Augustin Guyonnet (DRP) leaving August 2019
+\item \textbf{Michael Wood-Vasey} stepping down as DM Validation Scientist August 2019
+\item David Shupe (SUIT) leaving September 2019
+\item Tatiana Goldina (SUIT) leaving September 2019
+\item \textbf{Xiuqin Wu} (SUIT) leaving October 2019
 \end{itemize}
+
 }
 
