Tighten up review wording.

--- a/review.tex
+++ b/review.tex
@@ -1,14 +1,14 @@
 \frame{\frametitle{ Reviews}
 \begin{itemize}
 
-\item{Just finished Joint Directors Review - 2 recommendations
+\item{Just finished Joint Directors' Review: two recommendations for DM
   \begin{itemize}
-    \item{ Be ready to use any available resources  e.g.  cloud, but also other compute. }
+    \item{Be ready to use any available resources  e.g.  cloud, but also other compute. }
     \item{ Tooling for workflow management  especially debugging .}
-	\item {General feed back was positive.}
   \end{itemize}
+  \item {Overall feedback was positive; lots of thanks and plaudits to everybody in DM for their hard work over the last year.}
 }
-\item{Joint status review end of the month. }
+\item{Joint Status Review end of this month. }
 
 
 \end{itemize}
