Tweak wording around transition to ops.

--- a/dmtrans.tex
+++ b/dmtrans.tex
@@ -1,8 +1,8 @@
 \frame{\frametitle{Transition to Operations}
 \begin{itemize}
-\item In Operations, DM will transition into the Science Operations and Data Facility directorates.
+\item In Operations, the DM will transition into the Science Operations and Data Facility directorates.
 \item We have identified specific roles within those directorates which will be filled by current DM staff.
-\item Currently all DM staff who wish to transition to OPS should be able to do so.
-\item Next year a fraction of several people will be on the pre ops budget.
+\item We expect that DM staff who wish to transition to operations should be able to do so, although we're still in the process of figuring out roles and locations.
+\item A few people will begin transitioning to the pre-operations budget next year.
 \end{itemize}
 }
