More new arrivals.

--- a/people.tex
+++ b/people.tex
@@ -1,6 +1,8 @@
 
 \frame[allowframebreaks]{\frametitle{Many new faces..."}
 \begin{itemize}
+\item \textbf{Gabor Kovacs} -- joined the AP team, September 2018
+\item \textbf{Siegfried Eggl} -- joined the AP team, October 2018
 \item \textbf{Josh Meyers} -- (re!) joined the DRP team from LLNL, November 2018
 \item \textbf{Andr\'es Plazas} -- joined the DRP team, November 2018
 \item \textbf{R\'emy Joseph} -- Joined DRP from EPFL (Switzerland), December 2018
